Fix for buttons alignment in New Institutions form

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -136,8 +136,13 @@ a[title="Back"] {
       }
     }
   }
+
   h4 {
     font-weight: 700;
+  }
+
+  p {
+    min-height: 90px;
   }
 }
 
